--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,39 @@ a.underline:hover {
 
 h2 {
   /*color: var(--amber);*/ }
+
+.underlin {
+  text-decoration: underline;
+}
+
+.full-screen-card {
+  background-color: var(--dark-grey);
+}
+
+h1, h2, h3 {
+  color: var(--amber);
+}
+
+p {
+  color: #fff;
+}
+
+.hide {
+  display: none;
+}
+
+.important-text {
+  color: var(--dark-grey);
+  text-decoration: underline;
+}
+
+.banner {
+  width: 100vw;
+  min-height: 5em;
+  background-color: var(--amber);
+  margin-top: -1.1em;
+}
+
+nav a {
+  color: #fff;
+}
