--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,42 +1,72 @@
 /*CUSTOM*/
+* {
+	text-align: center;
+}
 
 div {
-	color: white;
-}
+  color: white; }
 
 pre {
-	text-align: left;
-	margin-left: 5vw;
-}
+  text-align: left;
+  margin-left: 5vw; }
 
 .this {
-	background-color: var(--amber);
-	color: var(--dark-grey);
-}
+  background-color: var(--amber);
+  color: var(--dark-grey); }
 
 .this2 {
-	background-color: var(--magenta);
-	color: var(--light-grey);
-}
+  background-color: var(--magenta);
+  color: var(--light-grey); }
 
 .this3 {
-	background-color: var(--medium-blue);
-	color: var(--light-grey);
-}
+  background-color: var(--medium-blue);
+  color: var(--light-grey); }
 
 .this4 {
-	color: var(--dark-grey);
-}
+  color: var(--dark-grey); }
 
 .underline {
-	text-decoration: underline;
-	color: var(--amber);
-} 
+  text-decoration: underline;
+  color: var(--amber); }
 
 a.underline:hover {
-		color: var(--red);
-}
+  color: var(--red); }
 
 h2 {
-	/*color: var(--amber);*/
+  /*color: var(--amber);*/ }
+
+.underlin {
+  text-decoration: underline;
+}
+
+.full-screen-card {
+  background-color: var(--dark-grey);
+}
+
+h1, h2, h3 {
+  color: var(--amber);
+}
+
+p {
+  color: #fff;
+}
+
+.hide {
+  display: none;
+}
+
+.important-text {
+  color: var(--dark-grey);
+  text-decoration: underline;
+}
+
+.banner {
+  width: 100vw;
+  min-height: 5em;
+  background-color: var(--amber);
+  margin-top: -1.1em;
+}
+
+nav a {
+  color: #fff;
 }
