--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*CUSTOM*/
 * {
-  text-align: center; }
+  text-align: center;
+}
 
 div {
   color: white; }
@@ -35,29 +36,45 @@ h2 {
   /*color: var(--amber);*/ }
 
 .underlin {
-  text-decoration: underline; }
+  text-decoration: underline;
+}
 
 .full-screen-card {
-  background-color: var(--dark-grey); }
+  background-color: var(--dark-grey);
+}
 
 h1, h2, h3 {
-  color: var(--amber); }
+  color: var(--amber);
+}
 
 p {
-  color: #fff; }
+  color: #fff;
+}
 
 .hide {
-  display: none; }
+  display: none;
+}
 
 .important-text {
   color: var(--dark-grey);
-  text-decoration: underline; }
+  text-decoration: underline;
+}
 
-.banner {
+/*.banner {
   width: 100vw;
   min-height: 5em;
   background-color: var(--amber);
-  margin-top: -1.1em; }
+  margin-top: -1.1em;
+}*/
 
 nav a {
-  color: #fff; }
+  color: #fff;
+}
+
+.banner {
+  width: 100vw;
+  /*height: 2em;*/
+  padding: 0.5em;
+  background-color: var(--amber);
+  margin-top: -1.1em;
+}
