--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -101,14 +101,6 @@ $script: chalkboard;
 		width: 100vw;
 	}
 
-	.footer-bottom {
-
-	}
-
-	.footer-fixed {
-		
-	}
-
 
 
 
@@ -140,7 +132,7 @@ $script: chalkboard;
 
 	.full-screen-card {
 		width: 95vw;
-		min-height: 95vh;
+		/*min-height: 95vh;*/
 		margin-top: 2.5vh;
 		margin-bottom: 2.5vh;
 	}
@@ -251,7 +243,7 @@ $script: chalkboard;
 
 
 
-/*	.medium-square-button {
+	.medium-square-button {
 		min-width: 8em;
 		min-height: 7vh;
 		outline: none;
@@ -268,7 +260,7 @@ $script: chalkboard;
 		border-color: #fff;
 		color: white;
 		transition: 0.1s;
-	}*/
+	}
 
 
 
