--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,83 @@
+$light-grey: #F9F9F9;
+$dark-grey: #292929;
+$magenta: #E91E63;
+$red: #F44336;
+$orange: #FF5C1A;
+$yellow: #FFD530;
+$amber: #FEC006;
+$emerald: #00B090;
+$medium-green: #00B090;
+$teal: #00AAB0;
+$light-blue: #00C6EA;
+$medium-green: #2A93FA;
+$dark-blue: #156BC3;
+
+$sans-serif: "Roboto", "Helvetica", "Arial", sans-serif;
+$serif: serif;
+$script: script;
+
+
+
+
+
+
+
+
+
 /*CUSTOM*/
 * {
 	text-align: center;
 }
+
+.logo:hover {
+  text-decoration: none;
+}
+/*NAV*/
+  nav.clear-nav {
+    position: fixed;
+  }
+  nav.clear-nav a {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  img.clear-nav {
+
+  }
+
+  /*triangle-nav*/
+  header.triangle-nav {
+    background-color: $medium-green;
+    width: 100vw;
+    height: 1em;
+    position: fixed;
+    z-index: 1;
+  }
+  nav.triangle-nav {
+    display: inline-block;
+    position: absolute;
+    top: 1em;
+    border-top: 3em solid $medium-green;
+    border-left: 50vw solid transparent;
+    border-right: 50vw solid transparent;
+  }
+  img.triangle-nav {
+    position: absolute;
+    top: 0;
+    height: 2.8em;
+    width: 2.8em;
+    margin-left: calc(50% - 1.4em);
+    margin-top: 0.7em;
+    margin-bottom: auto;
+  }
+
+  .no-nav {
+    width: 100vw;
+    height: 66vh;
+  }
+
+  footer {
+    width: 100vw;
+  }
 
 div {
   color: white; }
@@ -11,44 +87,51 @@ pre {
   margin-left: 5vw; }
 
 .this {
-  background-color: var(--amber);
-  color: var(--dark-grey); }
+  background-color: $amber;
+  color: $dark-grey; 
+}
 
 .this2 {
-  background-color: var(--magenta);
-  color: var(--light-grey); }
+  background-color: $magenta;
+  color: $light-grey; 
+}
 
-.this3 {
-  background-color: var(--medium-blue);
-  color: var(--light-grey); }
+/*.this3 {
+  background-color: $medium-blue;
+  color: $light-grey; 
+}*/
 
 .this4 {
-  color: var(--dark-grey); }
+  color: $dark-grey; 
+}
 
 .underline {
   text-decoration: underline;
-  color: var(--amber); }
+  color: $amber; 
+}
 
 a.underline:hover {
-  color: var(--red); }
+  color: $red; 
+}
 
 h2 {
-  /*color: var(--amber);*/ }
+  /*color: $amber;*/ 
+}
 
 .underlin {
   text-decoration: underline;
 }
 
 .full-screen-card {
-  background-color: var(--dark-grey);
+  background-color: $dark-grey;
 }
 
 h1, h2, h3 {
-  color: var(--amber);
+  color: $amber;
 }
 
 p {
-  color: #fff;
+  color: $light-grey;
 }
 
 .hide {
@@ -56,7 +139,7 @@ p {
 }
 
 .important-text {
-  color: var(--dark-grey);
+  color: $dark-grey;
   text-decoration: underline;
 }
 
@@ -68,12 +151,17 @@ p {
 }*/
 
 nav a {
-  color: #fff;
+  color: $light-grey !important;
 }
 
 .banner {
   width: 100vw;
   height: 2em;
-  background-color: var(--amber);
+  background-color: $amber;
   margin-top: -1.1em;
 }
+
+  .card, .rounded-card, .square-card {
+    margin-left: auto;
+    margin-right: auto;
+  }
