--- a/css/variable.css
+++ b/css/variable.css
@@ -1,84 +1,100 @@
-/*BOILERPLATE */
-body {
-  margin: 0; }
+/*VARIABLES*/
+/*ADD COLOURS WITH CLASSES*/
+/*main colour*/
+.light-grey {
+  color: #F9F9F9; }
 
-* {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif; }
-
-h1, h2, h3, h4, h5, h6, a, p {
-  padding: 1em;
+.dark-grey {
   color: #292929; }
 
-a {
-  text-decoration: none; }
-  a:hover {
-    text-decoration: underline; }
+.magenta {
+  color: #E91E63; }
 
-.logo:hover {
-  text-decoration: none; }
+.red {
+  color: #F44336; }
 
-/*FONTS*/
-.sans-serif, .roboto {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif; }
+.orange {
+  color: #FF5C1A; }
 
-/*GRID and LAYOUT (incl header and footer / top, bottom, left, right, centre) */
-/*NAV*/
-nav.clear-nav {
-  position: fixed; }
+.yellow {
+  color: #FFD530; }
 
-nav.clear-nav a {
-  margin-left: auto;
-  margin-right: auto; }
+.amber {
+  color: #FEC006; }
 
-/*triangle-nav*/
-header.triangle-nav {
-  background-color: #00b090;
-  width: 100vw;
-  height: 1em;
-  position: fixed;
-  z-index: 1; }
+.medium-green {
+  color: #2A93FA; }
 
-nav.triangle-nav {
-  display: inline-block;
-  position: absolute;
-  top: 1em;
-  border-top: 3em solid #00b090;
-  border-left: 50vw solid transparent;
-  border-right: 50vw solid transparent; }
+.emerald {
+  color: #00B090; }
 
-img.triangle-nav {
-  position: absolute;
-  top: 0;
-  height: 2.8em;
-  width: 2.8em;
-  margin-left: calc(50% - 1.4em);
-  margin-top: 0.7em;
-  margin-bottom: auto; }
+.teal {
+  color: #00AAB0; }
 
-.no-nav {
-  width: 100vw;
-  height: 66vh; }
+.light-blue {
+  color: #00C6EA; }
 
-footer {
-  width: 100vw; }
+.medium-blue {
+  color: #2A93FA; }
 
+.dark-blue {
+  color: #156BC3; }
+
+/*background colors*/
+.light-grey-bg {
+  background-color: #F9F9F9; }
+
+.dark-grey-bg {
+  background-color: #292929; }
+
+.magenta-bg {
+  background-color: #E91E63; }
+
+.red-bg {
+  background-color: #F44336; }
+
+.orange-bg {
+  background-color: #FF5C1A; }
+
+.yellow-bg {
+  background-color: #FFD530; }
+
+.amber-bg {
+  background-color: #FEC006; }
+
+.medium-green-bg {
+  background-color: #2A93FA; }
+
+.emerald-bg {
+  background-color: #00B090; }
+
+.teal-bg {
+  background-color: #00AAB0; }
+
+.light-blue-bg {
+  background-color: #00C6EA; }
+
+.medium-blue-bg {
+  background-color: #2A93FA; }
+
+.dark-blue-bg {
+  background-color: #156BC3; }
+
+/*ALPHA DEVELOPMENT ONLY!!*/
 /*CARDS*/
 .card {
-  background-color: #eee;
-  margin-left: auto;
-  margin-right: auto;
+  /*border-radius: 0.2em;*/
+  -webkit-border-radius: 0.2em;
+  -moz-border-radius: 0.2em;
+  -ms-border-radius: 0.2em;
   border-radius: 0.2em; }
 
 .rounded-card {
-  background-color: #eee;
-  margin-left: auto;
-  margin-right: auto;
+  /*border-radius: 0.4em;*/
+  -webkit-border-radius: 0.4em;
+  -moz-border-radius: 0.4em;
+  -ms-border-radius: 0.4em;
   border-radius: 0.4em; }
-
-.square-card {
-  background-color: #eee;
-  margin-left: auto;
-  margin-right: auto; }
 
 .max-screen-card {
   width: 100vw;
@@ -86,7 +102,6 @@ footer {
 
 .full-screen-card {
   width: 95vw;
-  min-height: 95vh;
   margin-top: 2.5vh;
   margin-bottom: 2.5vh; }
 
@@ -119,20 +134,19 @@ footer {
 .quarter-card {
   width: 25%; }
 
-/*	.full-golden-card {
-		width: 100vw;
-		height: 160vw;
-	}
+/*golden ratio card*/
+.full-golden-card {
+  width: 100vw;
+  height: 160vw; }
 
-	.half-golden-card {
-		width: 50vw;
-		height: 80vw;
-	}
+.half-golden-card {
+  width: 50vw;
+  height: 80vw; }
 
-	.third-golden-card {
-		width: 33.33vw;
-		height: 52.8vw;
-	}*/
+.third-golden-card {
+  width: 33.33vw;
+  height: 52.8vw; }
+
 /*BUTTONS*/
 button, .button, .square-button {
   text-align: center; }
@@ -141,26 +155,24 @@ button, .button, .square-button {
   outline: none;
   border: solid 0.1em lightgrey;
   background-color: white;
+  -webkit-border-radius: 0.2em;
+  -moz-border-radius: 0.2em;
+  -ms-border-radius: 0.2em;
   border-radius: 0.2em;
   transition: 1.4s; }
-
-.button:hover {
-  border-radius: 100em;
-  /*transition: 2s;*/ }
+  .button:hover {
+    border-radius: 100em; }
 
 .square-button {
   outline: none;
   border: none;
-  /*background-color:#00b090;*/
-  background-color: var(--medium-green);
-  color: white;
-  /*margin-left:calc(50vw - 3.25em) !important;*/ }
-
-.square-button:hover {
-  border: solid;
-  border-color: #fff;
-  color: white;
-  transition: 0.1s; }
+  background-color: #2A93FA;
+  color: white; }
+  .square-button:hover {
+    border: solid;
+    border-color: #F9F9F9;
+    color: white;
+    transition: 0.1s; }
 
 .small-button {
   min-width: 5em;
@@ -174,82 +186,18 @@ button, .button, .square-button {
   min-width: 260px;
   height: 56px; }
 
-/*	.medium-square-button {
-		min-width: 8em;
-		min-height: 7vh;
-		outline: none;
-		border: none;
-		background-color: #00b090;
-		font-size: 1.3em;
-		color: white;
-		cursor: pointer;
-		margin-left: calc(50vw - 4em);
-	}
-
-	.medium-button:hover {
-		border: solid;
-		border-color: #fff;
-		color: white;
-		transition: 0.1s;
-	}*/
-/*COLORS*/
-/*color variables*/
-body {
-  --light-grey: #EEE;
-  --dark-grey: #292929;
-  --magenta: #E91E63;
-  --red: #F44336;
-  --orange: #FF5C1A;
-  --yellow: #FFD530;
-  --amber: #FEC006;
-  --medium-green: #00b090;
-  --blue-green: #00aab0;
-  --light-blue: #00c6ea;
-  --medium-blue: #2a93Fa;
-  --dark-blue: #156bC3; }
-
-.background {
-  background-color: var(--background); }
-
-.main {
-  background-color: var(--main); }
-
-.hierarchy {
-  background-color: var(--hierarchy); }
-
-/*default backgrong colors*/
-.light-grey {
-  background-color: #EEE; }
-
-.dark-grey {
-  background-color: #292929; }
-
-.magenta {
-  background-color: #E91E63; }
-
-.red {
-  background-color: #F44336; }
-
-.orange {
-  background-color: #FF5C1A; }
-
-.yellow {
-  background-color: #FFD530; }
-
-.amber {
-  background-color: #FEC006; }
-
-.medium-green {
-  background-color: #00b090; }
-
-.blue-green {
-  background-color: #00aab0; }
-
-.light-blue {
-  background-color: #00c6ea; }
-
-.medium-blue {
-  background-color: #2a93Fa; }
-
-.dark-blue {
-  background-color: #156bC3; }
+.medium-square-button {
+  min-width: 8em;
+  min-height: 7vh;
+  outline: none;
+  border: none;
+  background-color: #2A93FA;
+  font-size: 1.3em;
+  color: white;
+  cursor: pointer;
+  margin-left: calc(50vw - 4em); }
+  .medium-square-button:hover {
+    border: solid;
+    border-color: #F9F9F9;
+    color: white;
+    transition: 0.1s; }
