--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -1,349 +1,261 @@
-/*BOILERPLATE */
-body {
-	margin: 0;
-}
-
-* {
-	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6, a, p {
-	padding: 1em;
-	color: #292929;
-}
-
-a {
-	text-decoration: none;
-		&:hover {
-			text-decoration: underline;
-	}
-}
-
-
-
-.logo:hover {
-	text-decoration: none;
-}
-
-
-label {
-
-}
-
-
-/*FONTS*/
-.sans-serif, .roboto {
-	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-}
+/*VARIABLES*/
+$light-grey: #F9F9F9;
+$dark-grey: #292929;
+$magenta: #E91E63;
+$red: #F44336;
+$orange: #FF5C1A;
+$yellow: #FFD530;
+$amber: #FEC006;
+$emerald: #00B090;
+$medium-green: #2A93FA;
+$teal: #00AAB0;
+$light-blue: #00C6EA;
+$medium-blue: #2A93FA;
+$dark-blue: #156BC3;
 
 $sans-serif: "Roboto", "Helvetica", "Arial", sans-serif;
-$roboto: "Roboto", "Helvetica", "Arial", sans-serif;
-
-.serif {
-
-}
-
 $serif: serif;
+$script: script;
 
-.script {
-
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
 }
 
-$script: chalkboard;
-
-/*GRID and LAYOUT (incl header and footer / top, bottom, left, right, centre) */
-
-
-/*NAV*/
-	nav.clear-nav {
-		position: fixed;
-	}
-	nav.clear-nav a {
-		margin-left: auto;
-		margin-right: auto;
-	}
-	img.clear-nav {
-
-	}
-
-	/*triangle-nav*/
-	header.triangle-nav {
-		background-color: #00b090;
-		width: 100vw;
-		height: 1em;
-		position: fixed;
-		z-index: 1;
-	}
-	nav.triangle-nav {
-		display: inline-block;
-		position: absolute;
-		top: 1em;
-		border-top: 3em solid #00b090;
-		border-left: 50vw solid transparent;
-		border-right: 50vw solid transparent;
-	}
-	img.triangle-nav {
-		position: absolute;
-		top: 0;
-		height: 2.8em;
-		width: 2.8em;
-		margin-left: calc(50% - 1.4em);
-		margin-top: 0.7em;
-		margin-bottom: auto;
-	}
-
-	.no-nav {
-		width: 100vw;
-		height: 66vh;
-	}
-
-	footer {
-		width: 100vw;
-	}
 
 
 
+
+
+/*ADD COLOURS WITH CLASSES*/
+/*main colour*/
+.light-grey {
+	color: $light-grey;
+}
+.dark-grey {
+	color: $dark-grey;
+}
+.magenta {
+	color: $magenta;
+}
+.red {
+	color: $red;
+}
+.orange {
+	color: $orange;
+}
+.yellow {
+	color: $yellow;
+}
+.amber {
+	color: $amber;
+}
+.medium-green {
+	color: $medium-green;
+}
+.emerald {
+	color: $emerald;
+}
+.teal {
+	color: $teal;
+}
+.light-blue {
+	color: $light-blue;
+}
+.medium-blue {
+	color: $medium-blue;
+}
+.dark-blue {
+	color: $dark-blue;
+}
+
+/*background colors*/
+.light-grey-bg {
+	background-color: $light-grey;
+}
+.dark-grey-bg {
+	background-color: $dark-grey;
+}
+.magenta-bg {
+	background-color: $magenta;
+}
+.red-bg {
+	background-color: $red;
+}
+.orange-bg {
+	background-color: $orange;
+}
+.yellow-bg {
+	background-color: $yellow;
+}
+.amber-bg {
+	background-color: $amber;
+}
+.medium-green-bg {
+	background-color: $medium-green;
+}
+.emerald-bg {
+	background-color: $emerald;
+}
+.teal-bg {
+	background-color: $teal;
+}
+.light-blue-bg {
+	background-color: $light-blue;
+}
+.medium-blue-bg {
+	background-color: $medium-blue;
+}
+.dark-blue-bg {
+	background-color: $dark-blue;
+}
+
+
+
+
+
+
+
+/*ALPHA DEVELOPMENT ONLY!!*/
 
 /*CARDS*/
-	.card {
-		background-color: #eee;
-		margin-left: auto;
-		margin-right: auto;
-		border-radius: 0.2em;
-	}
+.card {
+	/*border-radius: 0.2em;*/
+	@include border-radius(0.2em);
+}
 
-	.rounded-card {
-		background-color: #eee;
-		margin-left: auto;
-		margin-right: auto;
-		border-radius: 0.4em;
-	}
+.rounded-card {
+	/*border-radius: 0.4em;*/
+	@include border-radius(0.4em);
+}
 
-	.square-card {
-		background-color: #eee;
-		margin-left: auto;
-		margin-right: auto;
-	}
+.max-screen-card {
+	width: 100vw;
+	height: 100vh;
+}
 
-	.max-screen-card {
-		width: 100vw;
-		height: 100vh;
-	}
+.full-screen-card {
+	width: 95vw;
+	margin-top: 2.5vh;
+	margin-bottom: 2.5vh;
+}
 
-	.full-screen-card {
-		width: 95vw;
-		/*min-height: 95vh;*/
-		margin-top: 2.5vh;
-		margin-bottom: 2.5vh;
-	}
+.half-screen-card {
+	width: 50vw;
+	height: 50vw;
+}
 
-	.half-screen-card {
-		width: 50vw;
-		height: 50vw;
-	}
+.quarter-screen-card {
+	width: 25vw;
+	height: 25vw;
+}
 
-	.quarter-screen-card {
-		width: 25vw;
-		height: 25vw;
-	}
+.eigth-screen-card {
+	width: 12.5vw;
+	height: 12.5vw;
+}
 
-	.eigth-screen-card {
-		width: 12.5vw;
-		height: 12.5vw;
-	}
+.third-screen-card {
+	width: 33.33vw;
+	height: 33.33vw;		
+}
 
-	.third-screen-card {
-		width: 33.33vw;
-		height: 33.33vw;		
-	}
+.fifth-screen-card {
+	width: 20vw;
+	height: 20vw;
+}
 
-	.fifth-screen-card {
-		width: 20vw;
-		height: 20vw;
-	}
+.half-card {
+	width: 50%;
+}
 
+.third-card {
+	width: 33.33%;
+}
 
-	.half-card {
-		width: 50%;
-	}
+.quarter-card {
+	width: 25%;
+}
+/*golden ratio card*/
+.full-golden-card {
+	width: 100vw;
+	height: 160vw;
+}
 
-	.third-card {
-		width: 33.33%;
-	}
+.half-golden-card {
+	width: 50vw;
+	height: 80vw;
+}
 
-	.quarter-card {
-		width: 25%;
-	}
-
-/*	.full-golden-card {
-		width: 100vw;
-		height: 160vw;
-	}
-
-	.half-golden-card {
-		width: 50vw;
-		height: 80vw;
-	}
-
-	.third-golden-card {
-		width: 33.33vw;
-		height: 52.8vw;
-	}*/
+.third-golden-card {
+	width: 33.33vw;
+	height: 52.8vw;
+}
 
 
 
 /*BUTTONS*/
-	button, .button, .square-button {
-		text-align: center;
-	}
+button, .button, .square-button {
+	text-align: center;
+}
 
-	.button {
-		outline: none;
-		border: solid 0.1em lightgrey;
-		background-color: white;
-		border-radius: 0.2em;
-		transition: 1.4s;
-	}
-
-	.button:hover {
+.button {
+	outline: none;
+	border: solid 0.1em lightgrey;
+	background-color: white;
+	@include border-radius(0.2em);
+	transition: 1.4s;
+	&:hover {
 		border-radius: 100em;
-		/*transition: 2s;*/
 	}
+}
 
-	.square-button {
-		outline:none;
-		border:none;
-		/*background-color:#00b090;*/
-		background-color: var(--medium-green);
-		color:white;
-		/*margin-left:calc(50vw - 3.25em) !important;*/
-	}
-	
-	.square-button:hover {
+.square-button {
+	outline:none;
+	border:none;
+	background-color: $medium-green;
+	color:white;
+	&:hover {
 		border:solid;
-		border-color:#fff;
+		border-color: $light-grey;
 		color:white;
 		transition:0.1s;
 	}
+}
 
-	.small-button {
-		min-width: 5em;
-		height:2em;
-	}
+.small-button {
+	min-width: 5em;
+	height:2em;
+}
 
-	.medium-button {
-		width:130px;
-		height:50px;
-	}
+.medium-button {
+	width:130px;
+	height:50px;
+}
 
-	.large-button {
-		min-width: 260px;
-		height: 56px;
-	}
+.large-button {
+	min-width: 260px;
+	height: 56px;
+}
 
-
-
-	.medium-square-button {
-		min-width: 8em;
-		min-height: 7vh;
-		outline: none;
-		border: none;
-		background-color: #00b090;
-		font-size: 1.3em;
-		color: white;
-		cursor: pointer;
-		margin-left: calc(50vw - 4em);
-	}
-
-	.medium-button:hover {
+.medium-square-button {
+	min-width: 8em;
+	min-height: 7vh;
+	outline: none;
+	border: none;
+	background-color: $medium-green;
+	font-size: 1.3em;
+	color: white;
+	cursor: pointer;
+	margin-left: calc(50vw - 4em);
+	&:hover {
 		border: solid;
-		border-color: #fff;
+		border-color: $light-grey;
 		color: white;
 		transition: 0.1s;
 	}
-
-
-
-
-
-/*COLORS*/
-	/*color variables*/
-	$light-grey: #EEE;
-	$dark-grey: #292929;
-	$magenta: #E91E63;
-	$red: #F44336;
-	$orange: #FF5C1A;
-	$yellow: #FFD530;
-	$amber: #FEC006;
-	$medium-green: #00b090;
-	$blue-green: #00aab0;
-	$light-blue: #00c6ea;
-	$medium-blue: #2a93Fa;
-	$dark-blue: #156bC3;
-
-	body {
-	  --light-grey: #EEE;
-	  --dark-grey: #292929;
-	  --magenta: #E91E63;
-	  --red: #F44336;
-	  --orange: #FF5C1A;
-	  --yellow: #FFD530;
-	  --amber: #FEC006;
-	  --medium-green: #00b090;
-	  --blue-green: #00aab0;
-	  --light-blue: #00c6ea;
-	  --medium-blue: #2a93Fa;
-	  --dark-blue: #156bC3;
-	}
-
-	.background {
-		background-color: var(--background);
-	}
-	.main {
-		background-color: var(--main);
-	}
-	.hierarchy {
-		background-color: var(--hierarchy);
-	}
-
-	/*default backgrong colors*/
-	.light-grey {
-		background-color: $light-grey;
-	}
-	.dark-grey {
-		background-color: $dark-grey;
-	}
-	.magenta {
-		background-color: $magenta;
-	}
-	.red {
-		background-color: $red;
-	}
-	.orange {
-		background-color: $orange;
-	}
-	.yellow {
-		background-color: $yellow;
-	}
-	.amber {
-		background-color: $amber;
-	}
-	.medium-green {
-		background-color: $medium-green;
-	}
-	.blue-green {
-		background-color: $blue-green;
-	}
-	.light-blue {
-		background-color: $light-blue;
-	}
-	.medium-blue {
-		background-color: $medium-blue;
-	}
-	.dark-blue {
-		background-color: $dark-blue;
-	}
-
-
+}
 
 
