--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+/*BASIC BOILERPLATE */
+* {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif; }
+
+body {
+  margin: 0;
+  background-color: #F9F9F9; }
+
+h1, h2, h3, h4, h5, h6, a, p {
+  padding: 1em;
+  color: #292929; }
+
+a {
+  text-decoration: none; }
+  a:hover {
+    text-decoration: underline; }
+
 /*CUSTOM*/
 * {
   text-align: center; }
