--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,7 +18,27 @@ $script: script;
 
 
 
+/*BASIC BOILERPLATE */
+* {
+  font-family: $sans-serif;
+}
+body {
+  margin: 0;
+  background-color: $light-grey;
 
+}
+
+h1, h2, h3, h4, h5, h6, a, p {
+  padding: 1em;
+  color: $dark-grey;
+}
+
+a {
+  text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+  }
+}
 
 
 
