--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,11 @@ body {
 
 h1, h2, h3, h4, h5, h6, a, p {
   padding: 1em;
-  color: #292929; }
+  color: #292929;
+  max-width: 55em;
+  /*text-align: center;*/
+  margin-left: auto;
+  margin-right: auto; }
 
 a {
   text-decoration: none; }
