--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,6 +31,10 @@ body {
 h1, h2, h3, h4, h5, h6, a, p {
   padding: 1em;
   color: $dark-grey;
+  max-width: 55em;
+  /*text-align: center;*/
+  margin-left: auto;
+  margin-right: auto;
 }
 
 a {
