--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,24 @@ body {
 h1, h2, h3, h4, h5, h6, a, p {
   padding: 1em;
   color: #292929;
-  max-width: 55em;
+  max-width: 48em;
   /*text-align: center;*/
   margin-left: auto;
   margin-right: auto; }
+
+h1 {
+  padding: 0.5em;
+  color: #292929;
+}
 
 a {
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
+
+div.card {
+  min-width: 7em; 
+}
 
 /*CUSTOM*/
 * {
@@ -128,7 +137,7 @@ nav a {
 
 .banner {
   width: 100vw;
-  height: 2em;
+  height: auto;
   background-color: #FEC006;
   margin-top: -1.1em; }
 
