--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,7 +45,9 @@ a {
 }
 
 
-
+div.card {
+  min-width: 7em;
+}
 
 
 /*CUSTOM*/
@@ -180,7 +182,7 @@ nav a {
 
 .banner {
   width: 100vw;
-  height: 2em;
+  height: auto;
   background-color: $amber;
   margin-top: -1.1em;
 }
