--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,12 +29,13 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, a, p {
-  padding: 1em;
+  padding: 0.5em;
   color: $dark-grey;
   max-width: 55em;
   /*text-align: center;*/
   margin-left: auto;
   margin-right: auto;
+  line-height: 1.414em;
 }
 
 a {
@@ -152,7 +153,7 @@ h2 {
   background-color: $dark-grey;
 }
 
-h1, h2, h3 {
+h2, h3 {
   color: $amber;
 }
 
@@ -191,3 +192,8 @@ nav a {
     margin-left: auto;
     margin-right: auto;
   }
+
+.font-img {
+  width: 90%;
+  padding-bottom: 1em;
+}
